# Master-CIO

./: README.md
Memoire/: main.tex
Memoire/bibliography/: references.bib
Memoire/chapters/: abstract.tex  acknowledgments.tex  acronyms.tex  appendices.tex  appendix.tex  bibliography.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  dedication.tex  titlepage.tex
SecureIoT-VIF/: CMakeLists.txt  LICENSE  README.md  requirements.txt  sdkconfig.defaults
SecureIoT-VIF/components/firmware_verification/: CMakeLists.txt  integrity_checker.c
SecureIoT-VIF/components/firmware_verification/include/: integrity_checker.h
SecureIoT-VIF/components/secure_element/: CMakeLists.txt  crypto_operations_basic.c
SecureIoT-VIF/components/secure_element/include/: crypto_operations_basic.h
SecureIoT-VIF/components/security_monitor/: CMakeLists.txt  anomaly_detector.c  incident_manager.c
SecureIoT-VIF/components/security_monitor/include/: anomaly_detector.h  incident_manager.h
SecureIoT-VIF/components/sensor_interface/: CMakeLists.txt  dht22_driver.c  sensor_manager.c
SecureIoT-VIF/components/sensor_interface/include/: dht22_driver.h  sensor_manager.h
SecureIoT-VIF/configs/: quick-start.config
SecureIoT-VIF/docs/: ARCHITECTURE_COMMUNITY.md
SecureIoT-VIF/main/: app_config.h  main.c
SecureIoT-VIF/tests/: test_community_features.py
SecureIoT-VIF/tools/: flash_tool_community.py
